--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,9 @@
 </head>
 <body>
     <p>Welcome to chat app</p>
-
+    
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-      socket.on('connect', ()=>{
-        console.log("Connected to server!!!")
-      });
-      socket.on('disconnect', ()=>{
-        console.log("Connection lost!")
-      })
-    </script>
+    <script src="/js/index.js"></script>
+
 </body>
 </html>
