--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,20 @@
 </head>
 <body>
     <p>Welcome to chat app</p>
+
+    <ol id='messages'>
+        
+    </ol>
+
+    <form id="message-form">
+       <input name='message' type="text" placeholder="Message..."/>
+       <button>Submit</button>
+    </form>
     
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.1.0.min.js"></script>
     <script src="/js/index.js"></script>
+   
 
 </body>
 </html>
