--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,15 @@
     <p>Welcome to chat app</p>
 
     <ol id='messages'>
-        
+
     </ol>
 
     <form id="message-form">
        <input name='message' type="text" placeholder="Message..."/>
        <button>Submit</button>
     </form>
+
+    <button id="send-location">Send Location</button>
     
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.1.0.min.js"></script>
